# mainui_cpp

./: .gitignore  .gitmodules  .travis.yml  Android.mk  BMPUtils.h  BaseMenu.cpp  BaseMenu.h  Btns.cpp  Btns.h  BtnsBMPTable.h  CFGScript.cpp  CFGScript.h  CMakeLists.txt  Color.h  ColorUtils.h  EngineCallback.cpp  EventSystem.cpp  EventSystem.h  HudFont.cpp  Image.h  Makefile.linux  MenuStrings.cpp  MenuStrings.h  Primitive.h  Scissor.cpp  Scissor.h  Utils.cpp  Utils.h  WindowSystem.cpp  WindowSystem.h  dictgen.py  enginecallback.h  enginecallback_menu.h  exports.txt  extdll.h  extdll_menu.h  makefile.mingw  test_dictgen.py  udll_int.cpp  unicode_strtools.cpp  (+4 more)
controls/: Action.cpp  Action.h  BackgroundBitmap.cpp  BackgroundBitmap.h  BaseClientWindow.cpp  BaseClientWindow.h  BaseItem.cpp  BaseItem.h  BaseWindow.cpp  BaseWindow.h  Bitmap.cpp  Bitmap.h  CheckBox.cpp  CheckBox.h  ColorPicker.cpp  ColorPicker.h  DropDown.cpp  DropDown.h  Editable.cpp  Editable.h  Field.cpp  Field.h  Framework.cpp  Framework.h  ItemsHolder.cpp  ItemsHolder.h  MessageBox.cpp  MessageBox.h  MovieBanner.cpp  PicButton.cpp  PicButton.h  PlayerModelView.cpp  PlayerModelView.h  ProgressBar.cpp  ProgressBar.h  ScrollList.cpp  ScrollList.h  ScrollView.cpp  ScrollView.h  Slider.cpp  (+11 more)
font/: BaseFontBackend.cpp  BaseFontBackend.h  BitmapFont.cpp  BitmapFont.h  FontManager.cpp  FontManager.h  FontRenderer.h  FreeTypeFont.cpp  FreeTypeFont.h  StbFont.cpp  StbFont.h  WinAPIFont.cpp  WinAPIFont.h
menus/: AdvancedControls.cpp  Audio.cpp  ColorPickerDialog.cpp  ColorPickerDialog.h  Configuration.cpp  ConnectionProgress.cpp  ConnectionProgress.h  ConnectionWarning.cpp  ConnectionWarning.h  Controls.cpp  CreateGame.cpp  Credits.cpp  CustomGame.cpp  FileDialog.cpp  GameOptions.cpp  Gamepad.cpp  Gyro.cpp  InputDevices.cpp  LoadGame.cpp  Main.cpp  Multiplayer.cpp  NewGame.cpp  PlayerIntroduceDialog.cpp  PlayerIntroduceDialog.h  PlayerSetup.cpp  SaveGame.cpp  SaveLoad.cpp  Scoreboard.cpp  Scoreboard.h  ServerBrowser.cpp  ServerInfo.cpp  Touch.cpp  TouchButtons.cpp  TouchEdit.cpp  TouchOptions.cpp  Video.cpp  VideoModes.cpp  VideoOptions.cpp  Zoo.cpp
menus/client/: BuyMenu.cpp  ClientWindow.cpp  ClientWindow.h  JoinClass.cpp  JoinGame.cpp
menus/dynamic/: ScriptMenu.cpp
model/: BaseModel.h  IntegerRangeModel.h  KbActListModel.h  StringVectorModel.h
msvc6/: compile.bat  continious_upload.sh  travis-deploy.sh
sdk_includes/: copy.sh
sdk_includes/common/: gameinfo.h
sdk_includes/engine/: menu_int.h
sdk_includes/public/: build.h  buildenums.h  xash3d_mathlib.h
tests/: test_skeleton.txt
translations/: mainui_skeleton_everything.txt  mainui_skeleton_nostringslst.txt  mainui_skeleton_stripped.txt
utl/: utlmemory.h  utlrbtree.h
vs2022/: IMPORTANT_NOTE_FOR_MOD_DEVELOPER.txt  mainui_cpp.vcxproj  mainui_cpp.vcxproj.filters
